--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,11 +61,13 @@
         android:id="@+id/btnScan"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:elevation="2dp"
         android:gravity="start|center_vertical"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:paddingStart="55dp"
+        android:paddingStart="60dp"
         android:paddingEnd="0dp"
+        android:stateListAnimator="@null"
         android:text="@string/btnScan"
         android:textAllCaps="false"
         android:visibility="visible"
@@ -81,7 +83,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginStart="10dp"
-        android:elevation="10dp"
+        android:elevation="2dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,14 +92,65 @@
         app:tint="@color/white" />
 
     <Button
-        android:id="@+id/btnCheckout"
+        android:id="@+id/btnOrders"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:elevation="2dp"
         android:gravity="start|center_vertical"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:paddingStart="55dp"
+        android:paddingStart="60dp"
         android:paddingEnd="0dp"
+        android:stateListAnimator="@null"
+        android:text="@string/btnOrders"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        app:cornerRadius="0dp"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frame" />
+
+    <ImageView
+        android:id="@+id/iconOrders"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="10dp"
+        android:elevation="2dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frame"
+        app:srcCompat="@drawable/ic_baseline_shopping_bag_24"
+        app:tint="@color/white" />
+
+    <com.joanzapata.iconify.widget.IconButton
+        android:id="@+id/iconOrdersBadge"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="-25dp"
+        android:background="@drawable/badge_count"
+        android:elevation="10dp"
+        android:text="99"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/iconOrders"
+        app:layout_constraintTop_toBottomOf="@id/iconOrders"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/btnCheckout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:elevation="2dp"
+        android:gravity="start|center_vertical"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:paddingStart="60dp"
+        android:paddingEnd="0dp"
+        android:stateListAnimator="@null"
         android:text="@string/btnCheckout"
         android:textAllCaps="false"
         android:visibility="gone"
@@ -113,12 +166,12 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginStart="10dp"
-        android:elevation="10dp"
+        android:elevation="2dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frame"
-        app:srcCompat="@drawable/ic_baseline_shopping_bag_24"
+        app:srcCompat="@drawable/ic_baseline_credit_card_24"
         app:tint="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
