--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -1,57 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/listTitle"
+        android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:gravity="start"
         android:padding="10dp"
-        android:text="Title"
+        android:text="@string/titleText"
         android:textColor="@android:color/black"
-        app:layout_constraintEnd_toStartOf="@+id/listTotal"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/listTotal"
+        android:id="@+id/orderTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:padding="10dp"
-        android:text="Total"
+        android:text="@string/totalText"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/listTitle"
+        app:layout_constraintStart_toEndOf="@+id/titleText"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/statusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="start"
         android:padding="10dp"
-        android:text="Status"
+        android:text="@string/statusText"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/listTitle"
-        app:layout_constraintStart_toStartOf="@+id/listTitle"
-        app:layout_constraintTop_toBottomOf="@+id/listTitle" />
+        app:layout_constraintStart_toStartOf="@+id/titleText"
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <TextView
-        android:id="@+id/listStatus"
+        android:id="@+id/orderStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Status"
+        android:text="@string/statusText"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/listTotal"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/listTotal"
-        app:layout_constraintTop_toBottomOf="@+id/listTotal" />
+        app:layout_constraintStart_toEndOf="@+id/statusText"
+        app:layout_constraintStart_toStartOf="@+id/orderTotal"
+        app:layout_constraintTop_toBottomOf="@+id/orderTotal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
