Added data binding to Order and Payment fragments
- Added data binding to Order and Payment fragments (causes flickering when expanding list?)
- Made Order- and Payment fragment use same view and adapter using Koin
- Solved issue where order fragment list item status would  not update when returning from payment fragment
- Created OrderObservable class in which all data for expandable list is stored (eliminates 'titles' list)
- Moved  'observable data classes' to separate class files

--- a/app/src/main/res/layout/card_design.xml
+++ b/app/src/main/res/layout/card_design.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="itemObservable"
-            type="com.easysystems.easyorder.viewModels.ItemListViewModel.ItemObservable" />
+            type="com.easysystems.easyorder.data.ItemObservable" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
